# nucgen

./: Cargo.toml  README.md
src/: cli.rs  format.rs  lib.rs  main.rs  nucleotide.rs  sequence.rs  write.rs
