[package]
name = "nucgen"
authors = ["Noam Teyssier"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/noamteyssier/nucgen"
documentation = "https://docs.rs/nucgen"
description = "A simple tool and library for generating random nucleotide sequences."
license = "MIT"
keywords = ["bioinformatics", "nucleotide", "sequence", "random"]
categories = ["science"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
gzp = "0.11.3"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
seq_io = "0.3.2"
